# associazione-api

./: .dockerignore  .env.example  .gitignore  .secrets.enc.env  .sops.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  railway.json  railway.toml  test.db
.github/workflows/: ci.yml
app/api/: deps.py
app/core/: config.py  database.py  logging.py  middleware.py  security.py  storage.py
app/exceptions/: auth.py  configurazione_banda_anno.py  contatto.py  documento.py  esterno.py  flusso_cassa.py  indirizzo.py  iscrizione.py  lookup.py  persona.py  ricevuta.py  servizio.py  socio.py  sotto_cartella.py  spartito.py  template.py  utente.py  voce_contabilita.py
app/models/: __init__.py  configurazione_banda_anno.py  contatto.py  documento.py  esterno.py  flusso_cassa.py  indirizzo.py  iscrizione.py  lookups.py  macro_sezione.py  nome_parte.py  oauth_account.py  password_reset_token.py  permesso.py  persona.py  relations.py  ricevuta.py  ruolo.py  servizio.py  sessione.py  socio.py  sotto_cartella.py  spartito.py  template.py  utente.py  voce_contabilita.py
app/repositories/: banda_indirizzo_repository.py  configurazione_banda_anno_repository.py  contatto_repository.py  documento_repository.py  esterno_repository.py  flusso_cassa_repository.py  indirizzo_repository.py  iscrizione_repository.py  lookup.py  nome_parte_repository.py  oauth_account_repository.py  password_reset_repository.py  permesso_repository.py  persona_repository.py  ricevuta_repository.py  ruolo_repository.py  servizio_repository.py  sessione_repository.py  socio_repository.py  sotto_cartella_repository.py  sottovoce_rendiconto_repository.py  spartito_repository.py  template_repository.py  utente_repository.py  voce_contabilita_repository.py
app/schemas/: _types.py  auth.py  check_quote.py  configurazione_banda_anno.py  contatto.py  documento.py  esterno.py  flusso_cassa.py  indirizzo.py  iscrizione.py  lookups.py  macro_sezione.py  permesso.py  persona.py  rendiconto.py  ricevuta.py  ruolo.py  servizio.py  socio.py  sotto_cartella.py  spartito.py  template.py  utente.py  voce_contabilita.py
app/services/: auth_service.py  banda_indirizzo_service.py  check_quote_service.py  configurazione_banda_anno_service.py  contatto_service.py  documento_service.py  email_service.py  esterno_service.py  flusso_cassa_service.py  indirizzo_service.py  iscrizione_service.py  lookup.py  macro_sezione_service.py  nome_parte_service.py  oauth_service.py  permessi_archivio.py  permesso_service.py  persona_service.py  rendiconto_service.py  ricevuta_service.py  ruolo_service.py  servizio_service.py  socio_service.py  sotto_cartella_service.py  spartito_service.py  template_service.py  utente_service.py  (+1 more)
db/: 01-roles.sh
migrations/: env.py
scripts/: seed_production.py
tests/: conftest.py  test_migrations.py
(+97 files in other folders)
