[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app", "main.py"]

[tool.hatch.build.targets.sdist]
include = ["app/", "main.py", "migrations/"]

[project]
name = "associazione-api"
version = "0.1.0"
description = "REST API backend for music association management"
requires-python = ">=3.12"
dependencies = [
    # ── Toolkit (shared utilities — logging, pagination, retry, health) ──
    "associazione-api-toolkit @ git+https://github.com/DevilFlow92/associazione-api-toolkit.git@v0.1.0",
    # ── Web framework ────────────────────────────────────────────────────
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    # ── Database ─────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    # ── Validation & config ───────────────────────────────────────────────
    "pydantic-settings>=2.14.1",
    "email-validator>=2.3.0",
    # ── File handling ─────────────────────────────────────────────────────
    "pypdf>=6.13.0",
    # ── Export (rendiconto PDF/XLSX) ──────────────────────────────────────
    "reportlab>=4.2.0",
    "openpyxl>=3.1.0",
    # NOTE: python-json-logger removed — logging is now handled by
    # associazione_toolkit.logging (structlog-based, included via toolkit).
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "resend>=2.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "ruff",
]
